--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ cache.dat
 cookiejar.dat
 reply.html
 data
+longman/back
+longman/lines
+longman/lines_back
+longman/blocks
+yatetradki/korean/tts_cache_naver
+yatetradki/korean/tts_cache_neospeech
+yatetradki/korean/cache_krdict
+
