--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ yatetradki/korean/tts_cache_naver
 yatetradki/korean/tts_cache_neospeech
 yatetradki/korean/cache_krdict
 
+.mypy_cache
+.vscode
+.tags
+data3
+index
+
