Add TOR=1 option to run requests over TOR

--- a/yatetradki/korean/Makefile
+++ b/yatetradki/korean/Makefile
@@ -2,3 +2,9 @@
 
 run_memrise_server:
 	PYTHONPATH=/usr/share/anki:. python2 memrise_server.py
+
+run_memrise_server_tor:
+	PYTHONPATH=/usr/share/anki:. TOR=1 python2 memrise_server.py
+	#PYTHONPATH=/usr/share/anki:. torify python2 memrise_server.py
+	#PYTHONPATH=/usr/share/anki:. torsocks python2 memrise_server.py
+	#PYTHONPATH=/usr/share/anki:. socksify python2 memrise_server.py
