experiment with densify: put more words into a column

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ yatetradki/korean/tts_cache_naver
 yatetradki/korean/tts_cache_neospeech
 yatetradki/korean/cache_krdict
 yatetradki/korean/cache_krdict_html
+yatetradki/korean/experiments
 
 .mypy_cache
 .vscode
