--- a/yatetradki/uitools/ordbok/requirements.txt
+++ b/yatetradki/uitools/ordbok/requirements.txt
@@ -1,6 +1,7 @@
 requests==2.24.0
 beautifulsoup4==4.8.2
-pyppeteer==0.2.2
+pyppeteer==1.0.2
+playwright==1.21.0
 PyQt5==5.14.1
 PyQtWebEngine==5.14.0
 Flask==1.1.2
