--- a/yatetradki/uitools/ordbok/requirements.txt
+++ b/yatetradki/uitools/ordbok/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.8.2
 pyppeteer==1.0.2
 playwright==1.21.0
 PyQt5==5.14.1
+PyQt5-sip==12.11.0
 PyQtWebEngine==5.14.0
 Flask==1.1.2
 
