--- a/yatetradki/uitools/ordbok/requirements.txt
+++ b/yatetradki/uitools/ordbok/requirements.txt
@@ -2,9 +2,10 @@ requests==2.24.0
 beautifulsoup4==4.8.2
 pyppeteer==1.0.2
 playwright==1.21.0
-PyQt5==5.14.1
-PyQt5-sip==12.11.0
-PyQtWebEngine==5.14.0
+PyQt6-Qt6==6.3.1
+PyQt6-sip==13.4.0
+PyQt6-WebEngine==6.3.1
+PyQt6-WebEngine-Qt6==6.3.1
 Flask==1.1.2
 
 cchardet==2.1.7
