--- a/yatetradki/uitools/ordbok/requirements.txt
+++ b/yatetradki/uitools/ordbok/requirements.txt
@@ -2,11 +2,13 @@ requests==2.24.0
 beautifulsoup4==4.8.2
 pyppeteer==1.0.2
 playwright==1.21.0
-PyQt6-Qt6==6.3.1
-PyQt6-sip==13.4.0
-PyQt6-WebEngine==6.3.1
-PyQt6-WebEngine-Qt6==6.3.1
 Flask==1.1.2
+
+PyQt6==6.5.0
+PyQt6-Qt6==6.5.0
+PyQt6-sip==13.5.1
+PyQt6-WebEngine==6.5.0
+PyQt6-WebEngine-Qt6==6.5.0
 
 cchardet==2.1.7
 lxml==4.9.1
@@ -14,4 +16,4 @@ aiohttp-jinja2==1.5
 Jinja2==3.0.3
 
 Telethon==1.24.0
-PyICU==2.9
+PyICU==2.11
