--- a/yatetradki/uitools/ordbok/requirements.txt
+++ b/yatetradki/uitools/ordbok/requirements.txt
@@ -1,14 +1,14 @@
 requests==2.24.0
 beautifulsoup4==4.8.2
-pyppeteer==1.0.2
+#pyppeteer==1.0.2
 playwright==1.35.0
 Flask==1.1.2
 
-PyQt6==6.5.0
-PyQt6-Qt6==6.5.0
-PyQt6-sip==13.5.1
-PyQt6-WebEngine==6.5.0
-PyQt6-WebEngine-Qt6==6.5.0
+PyQt6
+PyQt6-Qt6
+PyQt6-sip
+PyQt6-WebEngine
+PyQt6-WebEngine-Qt6
 
 cchardet==2.1.7
 lxml==4.9.1
